random fixes , font size and alignment

--- a/css/main.css
+++ b/css/main.css
@@ -232,3 +232,13 @@ body {
 .res {
     margin-top: 2%;
 }
+
+.v {
+    margin-top: 15%;
+}
+
+.tn {
+    font-family: "Comfortaa";
+    font-size: 150%;
+
+}
